update alignment. fix yellow

--- a/src/colors.css
+++ b/src/colors.css
@@ -5,25 +5,26 @@ body {
   font-weight: 600;
   font-style: normal;
   max-width: 1600px;
-  margin: 0 auto;
+  margin: 10 auto;
 }
 
 h1 {
   text-align: center;
   font-size: 4.21rem;
+  margin: 1rem 0;
 }
 
-.top-pair {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 2rem;
-}
 .color-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 50px;
+  gap: 2rem;
 }
+#by-colors {
+  justify-content: space-around;
+  margin-bottom: 2rem;
+}
+
 .color-block {
   display: flex;
   flex-direction: column;
@@ -105,7 +106,7 @@ h1 {
   justify-content: center;
   top: 0;
   left: 0;
-  animation: fadeInOut 2s forwards;
+  animation: fadeInOut 1s forwards;
 }
 
 @keyframes fadeInOut {
